fixed rendering of curse boxes on mobile

--- a/frontend/css/list-of-courses.css
+++ b/frontend/css/list-of-courses.css
@@ -7,13 +7,13 @@
   > .course{
     // layout
     position: relative;
-    height: 200px;
+    height: 195px;
     width: 156px;
 
     margin-right: 10px; margin-left: 10px;
     margin-bottom: 32px;
-    // pretty
-    border: 2px solid #444242;
+    // pretty (even prettier without next line)
+    // border: 2px solid #444242;
     background: white;
     box-shadow: 0px 1px 2px 0px #f0a1fb;
     text-align: center;
@@ -50,7 +50,7 @@
 
     > section.main{
       height: 156px;
-      padding-top: 15px;
+      padding-top: 10px;
       position: relative;
       overflow: hidden;
       h3.title{
@@ -168,13 +168,12 @@
   @media(max-width: 390px){
     > .course{
       width: 100%;
-      height: 88px;
+      height: 88px !important;
       padding-bottom: 19px;
       &.-simpleCourse{
         > section.main{
-          height: auto !important;
           padding-top: 4px !important;
-        }
+        } 
         article.description{
           padding-top: 4px !important;
           height: 32px !important;
